--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,7 @@
 
 body {
     background: rgb(0, 0, 0);
-    background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%) !important
+    background-image: #1F2235;
 }
 
 #main {
@@ -12,19 +12,34 @@ body {
 
 
 .main__header {
-    height: 60px;
+    height: 80px;
+    width: 100%;
+    background-color: #1F2235;
+}
+
+.sub__main--header {
     width: 80%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
-    border-bottom: 1px solid black;
+
+}
+
+.sticky {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .header__logo--my-name {
     user-select: none;
+    color: var(--primary-color);
     font-weight: 700;
-    font-size: 24px;
+    font-size: 32px;
 }
 
 .header__navbar {
@@ -37,13 +52,18 @@ body {
     height: 100%;
     display: flex;
     align-items: center;
-    margin: 0 10px;
+    margin: 0 26px;
     color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
+.header__navbar--text:hover {
+    color: #ff4a57;
+}
+
 .header__navbar--text {
     height: 100%;
+    color: #fff;
     display: flex;
     align-items: center;
 }
@@ -72,7 +92,6 @@ body {
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(7.5px);
     -webkit-backdrop-filter: blur(7.5px);
-
     border: 1px solid rgba(255, 255, 255, 0.3);
     transform: scale(1.5);
 }
@@ -105,10 +124,29 @@ body {
     height: 500px;
 }
 
+.content__introduce {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+
+.contend__img {
+    object-fit: cover;
+    display: flex;
+    align-items: center;
+}
+
+.avatar__img {
+    border-radius: 20px;
+    width: 100%;
+    height: fit-content;
+}
+
 .content--card {
     width: 100%;
     height: 500px;
-    border: 1px solid black;
+    background: #1F2235;
 }
 
 .main__footer {
