--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -55,6 +55,14 @@ li {
     padding-right: 20px;
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
 .text-medium-size {
     font-size: 18px;
     font-weight: 600;
