--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,7 @@ body {
 #main {
     height: 100%;
     width: 100%;
+    position: relative;
 }
 
 
@@ -15,6 +16,12 @@ body {
     height: 80px;
     width: 100%;
     background-color: #1F2235;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
 }
 
 .menu__mobile {
@@ -159,7 +166,12 @@ body {
 }
 
 
-.main__content {}
+.main__content {
+    position: absolute;
+    top:60px;
+    left: 0;
+    right: 0;
+}
 
 .content__introduce {
     display: flex;
@@ -182,8 +194,10 @@ body {
 
 .content--card {
     width: 80%;
-    height: 707px;
+    height: 600px;
     margin: auto;
+    position: relative;
+    top: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -191,7 +205,9 @@ body {
 }
 
 .content--card-sub {
-    width: 80%;
+    position: absolute;
+    left: 0;
+    right: 0;
     margin: 0 auto;
     display: flex;
 }
@@ -284,5 +300,5 @@ body {
 }
 
 .main__footer {
-    height: 600px;
+    height: 50px;
 }
